--- a/www/assets/theme.less
+++ b/www/assets/theme.less
@@ -1,20 +1,5 @@
-@primary-color: #020c14; // primary color for all components
+@primary-color: #141517; // primary color for all components
 @link-color: #020710; // link color
-@success-color: #52c41a; // success state color
-@warning-color: #faad14; // warning state color
-@error-color: #f5222d; // error state color
 @font-size-base: 16px; // major text font size
-@heading-color: rgba(0, 0, 0, 0.85); // heading text color
-@text-color: rgba(0, 0, 0, 0.85); // major text color
-@text-color-secondary : rgba(0, 0, 0, .45); // secondary text color
-@disabled-color : rgba(0, 0, 0, .25); // disable state color
+@text-color: rgba(233, 233, 233, 0.85); // major text color
 @border-radius-base: 4px; // major border radius
-@border-color-base: #d9d9d9; // major border color
-@box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
-@layout-header-height: 51px;
-@layout-header-padding : 0px 0px;
-@layout-header-background : #f8f8f8;
-@layout-body-background: #ffffff;
-@layout-footer-padding : 0px;
-@border-radius-base: 2px;
-@collapse-content-bg: #ffffff;
